add ability to submit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p>
         <form id="task-form">
             <div class="form-group">
-                <input type="text" name="task-name" placeholder="Enter Task Name" />
+                <input type="text" name="task-name" placeholder="Enter Task Name" class = "text-input" />
             </div>
             <div class="form-group">
                 <select name="task-type" class = "select-dropdown">
